# Projekt

./: CMakeLists.txt  DiscountsPage.qml  Hall.qml  LoginForm.ui.qml  LoginPage.qml  Order3.qml  Order4.qml  OrderForm1.ui.qml  Projekt.pro  Projekt.pro.user.6aa7ab1  Projekt.pro.user.6aa7ab1.4.8-pre1  StartingPageForm.ui.qml  Users.qml  UsersForm.ui.qml  main.qml
GUI/Projekt/: Discounts.qml  DiscountsForm.ui.qml  Login.qml  Menu.qml  MenuForm.ui.qml  Order2.qml  Order5.qml  OrderForm.ui.qml.autosave  OrderForm2.ui.qml  OrderForm3.ui.qml  OrderForm4.ui.qml  OrderForm5.ui.qml  Projekt.pro  Projekt.pro.user.20  Projekt.pro.user.4.8-pre1  StartingPage.qml  StartingPageForm.ui.qml  StartingPageForm_copy.ui.qml  Statistics.qml  StatisticsForm.ui.qml  StatisticsForm_copy.ui.qml  Users.qml  UsersForm.ui.qml  clock.cpp  clock.h  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
GUI/build-Projekt-Desktop-Debug/: Makefile  Projekt  qrc_qml.cpp
GUI/build-Projekt-Desktop-Release/: Makefile  Projekt  moc_clock.cpp  moc_predefs.h  qrc_qml.cpp
GUI/build-Projekt-Desktop_Qt_5_12_0_MSVC2017_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
GUI/build-Projekt-Desktop_Qt_5_12_0_MSVC2017_32bit-Debug/debug/: Projekt.ilk  qrc_qml.cpp
JAVA/restauracja/: pom.xml
JAVA/restauracja/src/main/java/com/projekt/: Application.java  CycleAvoidingMappingContext.java  SecurityConfig.java
JAVA/restauracja/src/main/java/com/projekt/controller/: DiscountController.java  HallController.java  HistoryController.java  HistoryDetailsController.java  MenuBarController.java  MenuController.java  OrderController.java  RabatController.java  SalaController.java  StatisticController.java  StatystykiController.java  StolController.java  SzczegolyHistoriiController.java  TableController.java
JAVA/restauracja/src/main/java/com/projekt/dto/: Danie.java  DanieWrapper.java  Dinner.java  DinnerWrapper.java  Discount.java  Entity.java  Historia.java  History.java  Order.java  Rabat.java  Rachunek.java  Stol.java  Table.java
JAVA/restauracja/src/main/java/com/projekt/enums/: AccountType.java  TypRachunku.java
JAVA/restauracja/src/main/java/com/projekt/mapper/: DinnerMapper.java  DinnerWrapperMapper.java  DiscountMapper.java  HistoryMapper.java  OrderMapper.java  TableMapper.java
JAVA/restauracja/src/main/java/com/projekt/model/: Dinner.java  DinnerToOrder.java  DinnerWrapper.java  Discount.java  History.java  Order.java  Table.java
JAVA/restauracja/src/main/java/com/projekt/repository/: DanieRepository.java  DinnerRepository.java  DiscountRepository.java  HistoryRepository.java  OrderRepository.java  RabatRepository.java  StolHistoryRepository.java  StolRepository.java  TableRepository.java
JAVA/restauracja/src/main/java/com/projekt/service/: DanieService.java  DinnerService.java  DiscountService.java  HistoriaService.java  HistoryService.java  OrderService.java  RabatService.java  StolService.java  TableService.java
JAVA/restauracja/src/main/java/com/projekt/util/: DecimalFormatter.java
JAVA/restauracja/src/main/java/com/projekt/validator/: NoBlankValidator.java
JAVA/restauracja/src/main/resources/: application.properties  banner.txt  import.sql
PU/: PU.mdj
Projekt/: Discounts.qml  DiscountsForm.ui.qml  Hall.qml  HallForm.ui.qml  Login.qml  LoginForm.ui.qml  MenuForm.ui.qml  Order1.qml  OrderForm1.ui.qml  OrderForm2.ui.qml  OrderForm3.ui.qml  OrderForm4.ui.qml  OrderForm5.ui.qml  Projekt.pro  StartingPageForm.ui.qml  Statistics.qml  StatisticsForm.ui.qml  Users.qml  UsersForm.ui.qml  main.cpp  main.qml  qml.qrc
UML/: model_uml.xml
User/Exception/: CouldNotOpenFileException.h  InvalidFilenameLengthException.h  PermissionDeniedException .h  UserIsNotLoggedException.h  UserNameNotUniqueException.h  UserWrongLengthException.h
User/Loader/: AbstractACLRepository.h  AbstractUserRepository.h  FileAclRepository.cpp  FileAclRepository.h  FileUserRepository.cpp
User/Model/: ACL.cpp  ACL.h  User.cpp  User.h
User/Repository/: AbstractACLRepository.h  AbstractUserRepository.h  FileAclRepository.cpp  FileAclRepository.h  FileUserRepository.cpp  FileUserRepository.h
User/Service/: UserService.cpp  UserService.h
User/Validator/: UsernameValidator.cpp  UsernameValidator.h
application/ContextManager/: ContextManager.cpp  ContextManager.h
application/Hall/: HallManager.cpp  HallManager.h
application/Hall/Model/: Hall.cpp  Hall.h
application/Hall/Reservation/: Reservation.cpp  Reservation.h
application/Hall/Reservation/ReservationData/: ReservationData.cpp  ReservationData.h
application/Hall/ReservationList/: ReservationList.cpp  ReservationList.h
application/Hall/ReservationList/Model/: ReservationListElement.cpp  ReservationListElement.h
application/Hall/Table/: Table.cpp  Table.h
application/MenuItem/: MenuItem.cpp  MenuItem.h
application/MenuItem/Dish/: Dish.cpp  Dish.h
application/MenuItem/Drink/: Drink.cpp  Drink.h
application/Report/: Bill.cpp  Bill.h  BillType.h  BufferedStatisticService.cpp  BufferedStatisticService.h  ReportService.cpp  ReportService.h  ReportType.h  StatisticService.h
